fix line-break in niv: diplay-block in span

--- a/assets/reader.css
+++ b/assets/reader.css
@@ -12,9 +12,9 @@
 .s2 { font-style: italic; margin-bottom: 4pt; margin-top: 8pt; }
 .sp { font-style: italic; margin-bottom: 4pt; margin-top: 8pt; }
 .li, .li1, .q2, .q3 { margin-left: 1em; margin-top: 0em; margin-bottom: 0.1em; line-height: 1.2em; }
-span.level1 { margin-left: 0; padding: 0; }
-span.level2 { margin-left: 15px; padding: 0; }
-span.level3 { margin-left: 30px; padding: 0; }
-span.level4 { margin-left: 45px; padding: 0; }
-span.para { padding: 0; padding-bottom: 10px; }
-.title-passage { font-weight: bold; padding-bottom: 10px; }
+span.level1 { display: block; margin-left: 0; padding: 0; }
+span.level2 { display: block; margin-left: 15px; padding: 0; }
+span.level3 { display: block; margin-left: 30px; padding: 0; }
+span.level4 { display: block; margin-left: 45px; padding: 0; }
+span.para { display: block; padding: 0; padding-bottom: 10px; }
+.title-passage { display: block; font-weight: bold; padding-bottom: 10px; }
